Move WriteTagsJob out of IpodCollection and use it everywhere

CHANGES:
 * Album cover images are written in background to prevent freezes

BUG: 298332
FIXED-IN: 2.6
DIGEST: Amarok now writes back covers in background to prevent freezes